--- a/package.json
+++ b/package.json
@@ -6,21 +6,47 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "tunnel": "npx cloudflared tunnel --url http://localhost:3000"
   },
   "dependencies": {
+    "@cosmjs/stargate": "^0.37.0",
+    "@headlessui/react": "^2.2.9",
+    "@interchain-kit/core": "^0.3.55",
+    "@interchain-kit/keplr-extension": "^0.3.55",
+    "@interchain-kit/leap-extension": "^0.3.55",
+    "@interchain-kit/react": "^0.3.55",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-visually-hidden": "^1.2.4",
+    "@reduxjs/toolkit": "^2.11.0",
+    "axios": "^1.13.2",
+    "chain-registry": "^2.0.115",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
+    "lucide-react": "^0.555.0",
     "next": "16.0.7",
+    "numeral": "^2.0.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-redux": "^9.2.0",
+    "recharts": "^3.5.1",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
