--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cosmjs/stargate": "^0.37.0",
     "@headlessui/react": "^2.2.9",
     "@interchain-kit/core": "^0.3.55",
+    "@interchain-kit/cosmostation-extension": "^0.3.55",
     "@interchain-kit/keplr-extension": "^0.3.55",
     "@interchain-kit/leap-extension": "^0.3.55",
     "@interchain-kit/react": "^0.3.55",
@@ -45,9 +46,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "cross-env": "^7.0.3",
-    "rimraf": "^5.0.10",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "rimraf": "^5.0.10",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
